fix projet header on mobile

--- a/src/assets/css/_project-header.scss
+++ b/src/assets/css/_project-header.scss
@@ -14,10 +14,11 @@
   border-top-right-radius: var(--border-radius-large);
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
-  overflow: hidden;
-  height: 100vmin;
 
   @media (--mobile-up) {
+    overflow: hidden;
+    height: 100vmin;
+
     &.portrait\:2-col {
       grid-template-areas:
         'text img'
@@ -130,9 +131,10 @@
     border-radius: 0;
     border-top-left-radius: var(--border-radius-large);
     border-top-right-radius: var(--border-radius-large);
-    height: 100vmin;
+    height: 100%;
 
     @media (--tablet-up) {
+      height: 100vmin;
       border-radius: 0;
       border-top-right-radius: var(--border-radius-large);
       border-top-left-radius: 0;
