--- a/src/assets/css/_project-item.scss
+++ b/src/assets/css/_project-item.scss
@@ -35,9 +35,9 @@
     align-self: start;
     padding: 0.5em 0 0;
 
-    > *:not(:last-child) {
-      margin-bottom: 0.5em;
-    }
+    // > *:not(:last-child) {
+    //   margin-bottom: 0.5em;
+    // }
   }
 
   &--img {
